<resources>
    <string name="app_name">SyncUp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="what_would_you_like_your_display_name_to_be">What would you like your display name to be?</string>
    <string name="display_name">Display Name</string>
    <string name="gmail_profile">Gmail Profile</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="skip">Skip</string>
    <string name="title_activity_event_list">EventListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_event_info">EventInfoActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invite">Invite</string>
</resources>
