<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_set_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.applications.severin.baron.syncup.SetProfileActivity">


    <TextView
        android:text="@string/what_would_you_like_your_display_name_to_be"
        android:textSize="@dimen/text_large"
        android:textAlignment="center"
        android:layout_width="0dp"
        android:layout_height="138dp"
        android:id="@+id/textView2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="31dp"
        android:layout_marginTop="41dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_normal"
        android:padding="@dimen/input_box_padding"
        android:id="@+id/textInputLayout5_takeoffDetailFragment"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintRight_toRightOf="@+id/textView2"
        app:layout_constraintLeft_toLeftOf="@+id/textView2"
        android:gravity="center"
        android:layout_marginTop="24dp"
        >

        <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:id="@+id/textView3"
        android:hint="@string/display_name"
        />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:text="@string/gmail_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_use_gmail_picture"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout5_takeoffDetailFragment"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:visibility="gone"
        />

    <Button
        android:text="@string/camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_use_camera_picture"
        app:layout_constraintRight_toRightOf="@+id/button_use_gmail_picture"
        app:layout_constraintLeft_toLeftOf="@+id/button_use_gmail_picture"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button_use_gmail_picture"
        android:visibility="gone"
        />

    <Button
        android:text="@string/gallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_use_gallery_picture"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button_use_camera_picture"
        app:layout_constraintLeft_toLeftOf="@+id/button_use_gmail_picture"
        app:layout_constraintRight_toRightOf="@+id/button_use_gmail_picture"
        android:visibility="gone"
        />

    <Button
        android:text="@string/skip"
        android:layout_height="wrap_content"
        android:id="@+id/button_skip_profile_picture"
        app:layout_constraintRight_toRightOf="@+id/button_use_gmail_picture"
        app:layout_constraintLeft_toLeftOf="@+id/button_use_gmail_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button_use_gallery_picture"
        android:layout_width="0dp"
        android:visibility="gone"
        />

</android.support.constraint.ConstraintLayout>
